# biofeedback-system

./: .coverage  .gitignore  README.md  pyproject.toml
archive/: data_acquisition.py  index.html  load_signal.py  main.css  read_data.py
archive/trash/: app.py  data_processing.py  home.html
biosignalsnotebooks/: Bokeh_Plotting.ipynb  EDA_Exploration.ipynb
src/: app.py  database.py  main.py
src/processing/: signal.py
src/processing/ecg/: ecg_signal.py
src/processing/eda/: eda_signal.py
src/static/: main.css  main.js
src/templates/: index.html
src/tests/: test_load_signal.py
