[tool.poetry]
name = "biofeedback-system"
version = "0.1.0"
description = "Backend for Bio-Feedback System"
authors = ["Jonas Bucksch <jonas@bucksch.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
scipy = "^1.11.1"
pandas = "^2.0.3"
opensignalsreader = "^0.2.2"
h5py = "^3.9.0"
biosignalsnotebooks = "^0.6.11"
bokeh = "^3.2.0"
pywavelets = "^1.4.1"
scikit-learn = "^1.3.0"
pytest = "^7.4.0"
flask = "^2.3.2"
jinja2 = "^3.1.2"
flask-login = "^0.6.2"
flask-migrate = "^4.0.4"
wtforms = "^3.0.1"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.19"
email-validator = "^2.0.0.post2"
gunicorn = "^20.1.0"
flask-restx = "^1.1.0"
python-dotenv = "^1.0.0"
flask-minify = "^0.42"
coverage = "^7.2.7"
pytest-cov = "^4.1.0"
werkzeug = "^2.3.6"
psycopg2-binary = "^2.9.6"
pylsl = "^1.16.1"
flask-socketio = "^5.3.4"
eventlet = "^0.33.3"
gevent = "^23.7.0"
gevent-websocket = "^0.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"